# act-global-infrastructure

./: .gitignore  .gitmodules  .mcp.json  .soul  ACT_ECOSYSTEM_COMPLETE_OVERVIEW.md  ACT_GHL_CRM_STRATEGY_ANALYSIS.md  ACT_INTELLIGENCE_HUB_COMPLETE.md  ADD_SECRETS.md  AGENTS.md  AI_FIRST_IMPLEMENTATION_PLAN.md  ALIGNMENT_REPORT.md  ALMA_JUSTICEHUB_IMPLEMENTATION_STATUS.md  ALMA_MEDIA_INTELLIGENCE_COMPLETE.md  ALMA_PHASE_2_COMPLETE.md  BACKEND_NAVIGATION.md  BACKEND_NAVIGATION_ACCURATE.md  BOTH_MODELS_DEPLOYED.md  CLAUDE.md  COMPLETE.md  DASHBOARD_FIX.md  DAY1_AUTOMATION_RESULTS.md  DEPLOY_V0.1_INSTRUCTIONS.md  DEPRECATED.md  GHL_COMMERCIAL_REVENUE_STRATEGY.md  GHL_CRM_SKILL_ENHANCEMENT_COMPLETE.md  GHL_IMPLEMENTATION_COMPLETE_PACKAGE.md  GHL_START_HERE.md  GHL_WEEK1_IMPLEMENTATION_COMPANION.md  HYBRID_DEPLOYMENT_STATUS.md  MY_TOOLS.md  PUSH_INSTRUCTIONS.md  README.md  README_COMPLETE.md  SETUP_COMPLETE.md  STEERING.md  SUPABASE_MIGRATION.sql  SUPABASE_MIGRATION_COMPLETE.sql  UNIFIED_INTELLIGENCE_PLAN_UPDATED.md  WEEK_1_COMPLETE.md  WEEK_3_WEB_UI_COMPLETE.md  (+17 more)
.claude/: handoff-prompt.md  mcp.json  plan.md  settings.json  (+2 more)
archive/act-personal-ai-2026-04/: .dockerignore  .env.example  .gitignore  ACT_DEVELOPMENT_PHILOSOPHY.md  README.md  pyproject.toml
archive/act-personal-ai-2026-04/agents/: alma_agent.py  cleanup_agent.py  impact_agent.py  story_writing_agent.py  sync_agent.py
archive/act-personal-ai-2026-04/docs/: README.md
archive/act-personal-ai-2026-04/tests/: test_cleanup_agent.py  test_search_agent.py
archive/act-personal-ai-2026-04/tools/: web_search_tool.py
(+5733 files in other folders)
