[project]
name = "act-personal-ai"
version = "1.0.0"
description = "ACT Regenerative Innovation Studio Personal AI - Multi-Agent System"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "beautifulsoup4>=4.12.3",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
